fix: alert icon alignment

--- a/src/styles/alert.css
+++ b/src/styles/alert.css
@@ -22,4 +22,6 @@
 
 .alert svg {
   height: 1.5rem;
+  padding-left: 0.1rem;
+  padding-top: 0.1rem;
 }
